# flatfile-mapping

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/flatfile_mapping/: __init__.py  automapping.py  filter.py  mapping_program.py  mapping_rule.py  nesting.py  synthetic_schema.py
tests/: automapping_test.py  filter_test.py  mapping_program_pandas_test.py  mapping_program_test.py  nesting_test.py  synthetic_schema_test.py
